added color scheme page to index page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hello git!</h1>
+    <div class="colors">
+        <a style="text-decoration: none;background-color: #272727; color: #FFE400;" href="./colors.html">Some color schemes</a>
+    </div>
 </body>
 </html>
