--- a/colors.html
+++ b/colors.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Some colors</title>
+    <title>Some color schemes"</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -37,7 +37,7 @@
         Do you like this color?
         <button>#color</button>
     </div>
-    
+
     <div class="colors yellow_black">
         Do you like this color?
         <button>#color</button>
