--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <div class="colors">
         <a style="text-decoration: none;background-color: #272727; color: #FFE400;" href="./colors.html">Some color schemes</a>
     </div>
+    <p>Checking out branching...</p>
 </body>
 </html>
