Added button page to index page

--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 </head>
 <body>
     <h1>Hello git!</h1>
-    <div class="colors">
-        <a style="text-decoration: none;background-color: #272727; color: #FFE400;" href="./colors.html">Some color schemes</a>
-    </div>
     <p>Checking out branching...</p>
+    <div class="colors" style="background-color: #272727;">
+        <a style="text-decoration: none; color: #FFE400;" href="./colors.html">Some color schemes</a>
+    </div>
+    
+    <div class="colors" style="background-color: #5CDB95;">
+        <a style="text-decoration: none; color: #EDF5E1;" href="./buttons.html">Buttons</a>
+    </div>
 </body>
 </html>
